examples/edgio-nextjs-commerce-example/packages/spree/dist/errors/SpreeSdkMethodFromEndpointPathError.js
class SpreeSdkMethodFromEndpointPathError extends Error {
}
export { SpreeSdkMethodFromEndpointPathError as default };
